<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Hi 5</string>
    <string name="Button" translatable="false">Local</string>
    <string name="Button_remote" translatable="false">Remote</string>
    <string name="text" translatable="false">filename</string>
    <string name="edit_message" translatable="false">Enter a http address</string>
    <string name="Button_2" translatable="false">Download</string>
    <string name="Button0" translatable="false">Connect</string>
    <string name="Button1" translatable="false">Login</string>
    <string name="Button2" translatable="false">Logout</string>
    <string name="Button3" translatable="false">Download</string>
    <string name="Button4" translatable="false">ImageBlock</string>
    <string name="favorite" translatable="false">favorite</string>
    <string name="search" translatable="false">search</string>
    <string name="more" translatable="false">more</string>
    <string name="content_description_favorite" translatable="false">content_description_favorite</string>
    <string name="content_description_search" translatable="false">content_description_search</string>
    <string name="content_description_more" translatable="false">content_description_more</string>
    <string name="agora_app_id" translatable="false">6c7991e8e6d640e2a55eeaed79a184b1</string>
    <string name="agora_access_token" translatable="false">#YOUR ACCESS TOKEN#</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email_username" translatable="false">Username</string>
    <string name="prompt_email" tools:ignore="MissingTranslation">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="prompt_password_check" translatable="false">Check Password</string>
    <string name="prompt_inviter_code" translatable="false">InviterCode</string>
    <string name="prompt_username" translatable="false">Username (Not repeatable)</string>
    <string name="prompt_userId" translatable="false">Username</string>
    <string name="prompt_nickname" translatable="false">Nickname</string>
    <string name="remember_password" translatable="false">Remember password ?</string>
    <string name="action_sign_in" translatable="false">Sign in</string>
    <string name="action_register" translatable="false">Register</string>
    <string name="action_register_now" translatable="false"><u>Register Now</u></string>
    <string name="welcome" translatable="false">"Welcome, "</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_nickname" translatable="false">Not a valid nickname</string>
    <string name="invalid_email" translatable="false">Not a valid email</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Nim: Login failed"</string>
    <string name="register_failed" translatable="false">"Register failed"</string>
    <string name="reconnecting" translatable="false">Network reconnecting ...</string>
    <string name="account_offline" translatable="false">Connection lost</string>
    <string name="find_password" translatable="false">confirm</string>
    <string name="find_password_hint1" translatable="false">Input some essential info about your account</string>
    <string name="find_password_hint2" translatable="false">Fields with a red star must be filled in</string>
    <string name="title_add_friends" translatable="false">Add Friends</string>
    <string name="title_peer_msg" translatable="false">Peer to peer message</string>
    <string name="title_channel_message" translatable="false">Channel message</string>
    <string name="title_peer_voice" translatable="false">Peer to peer chat</string>
    <string name="hint_friend" translatable="false">Friends name</string>
    <string name="hint_friend_msg" translatable="false">Enter some verification information</string>
    <string name="hint_channel" translatable="false">Channel name</string>
    <string name="hint_enable_offline_message" translatable="false">Enable offline message</string>
    <string name="account_cannot_be_yourself" translatable="false">Account can not be yourself</string>
    <string name="channel_name_empty" translatable="false">Channel name can not be empty</string>
    <string name="channel_name_too_long" translatable="false">Channel name can not exceed 64 characters</string>
    <string name="channel_name_starts_with_space" translatable="false">Channel name can not start with space</string>
    <string name="channel_name_literal_null" translatable="false">Channel name can not be \"null\"</string>
    <string name="btn_chat" translatable="false">Chat</string>
    <string name="btn_join" translatable="false">Join</string>
    <string name="btn_add" translatable="false">Add</string>
    <string name="account_empty" translatable="false">Account can not be empty</string>
    <string name="account_too_long" translatable="false">Account can not exceed 64 characters</string>
    <string name="account_starts_with_space" translatable="false">Account can not starts with space</string>
    <string name="account_literal_null" translatable="false">Account can not be \"null\"</string>
    <string name="channel_title" translatable="false">%s(%d)</string>
    <string name="join_channel_failed" translatable="false">Join channel failed</string>
    <string name="single_input" translatable="false">Single line input</string>
    <string name="str_send" translatable="false">Send</string>
    <string name="send_msg_failed" translatable="false">Failed to send message</string>
    <string name="call_failed" translatable="false">Failed to call</string>
    <string name="peer_offline" translatable="false">Peer is offline</string>
    <string name="message_cached" translatable="false">Message cached by server</string>
    <string name="call_cached" translatable="false">Call cached by server</string>
    <string name="email_exist" translatable="false">Email Already Exists</string>
    <string name="account_exit" translatable="false">Username Already Exists</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_contacts" translatable="false">Contacts</string>
    <string name="title_chats" translatable="false">Chats</string>
    <string name="title_me" translatable="false">Me</string>
    <string name="NA" translatable="false">UnKnown Friend</string>
    <string name="nullMsg" translatable="false">Null Msg</string>
    <string name="off_line" translatable="false">OFFLINE</string>
    <string name="on_line_busy" translatable="false">BUSY</string>
    <string name="on_line_pc" translatable="false">PC_ONLINE</string>
    <string name="on_line_mac" translatable="false">MAC_ONLINE</string>
    <string name="on_line_web" translatable="false">WEB_ONLINE</string>
    <string name="client_ios" translatable="false">IOS</string>
    <string name="client_aos" translatable="false">ANDROID</string>
    <string name="on_line" translatable="false">ONLINE</string>
    <string name="start_session_record" translatable="false">Start the whiteboard record</string>
    <string name="session_end_record" translatable="false">The whiteboard record is end</string>
    <string name="verify_reminder" translatable="false">Verify Message</string>
    <string name="clear_all_success" translatable="false">Clear all the Msg successfully</string>
    <string name="delete_tip" translatable="false">Delete Tip</string>
    <string name="delete_system_message" translatable="false">Delete this System Msg ?</string>
    <string name="delete_success" translatable="false">Delete Successfully</string>
    <string name="agree" translatable="false">Agree</string>
    <string name="reject" translatable="false">Reject</string>
    <string name="team_apply_sending" translatable="false">Sending…</string>
    <string name="cloud_message_clear_tips" translatable="false">Are you sure to clear the msg history based on the cloud ?</string>
    <string name="sure_sync" translatable="false">Sure to sync ?</string>
    <string name="message_history_query_ingore" translatable="false">The cloud msg (被清除消息入库)</string>
    <string name="message_history_query_remember" translatable="false">The cloud msg (被清除消息不入库)</string>
    <string name="message_clear_record" translatable="false">Clear local msg (记录操作)</string>
    <string name="message_clear_not_record" translatable="false">Clear local msg (不记录操作)</string>
    <string name="cloud_message_clear" translatable="false">clear the cloud msg history</string>
    <string name="user_profile" translatable="false">User Profile</string>
    <string name="birthday" translatable="false">Birthday</string>
    <string name="phone" translatable="false">Telephone</string>
    <string name="email" translatable="false">Email</string>
    <string name="signature" translatable="false">Signature</string>
    <string name="head" translatable="false">Head</string>
    <string name="alias" translatable="false">Alias</string>
    <string name="male" translatable="false">Male</string>
    <string name="female" translatable="false">Female</string>
    <string name="other" translatable="false">Other</string>
    <string name="nickname" translatable="false">Nickname</string>
    <string name="gender" translatable="false">Gender</string>
    <string name="phone_number" translatable="false">Phone Number</string>
    <string name="nickname_empty" translatable="false">Nickname can not be empty</string>
    <string name="user_info_update_failed" translatable="false">Fail to set the user info, Try again please !</string>
    <string name="user_info_update_success" translatable="false">Set the user info Successfully !</string>
    <string name="user_information" translatable="false">User Information</string>
    <string name="user_info_update_cancel" translatable="false">Cancel the update</string>
    <string name="head_update_success" translatable="false">Update head portrait successfully !</string>
    <string name="head_update_failed" translatable="false">Fail to update head portrait, Try again please !</string>
    <string name="snapchat_longclick_to_view" translatable="false">LongClick to view the Picture !</string>
    <string name="unread" translatable="false">unread</string>
    <string name="message_info" translatable="false">Message Info</string>
    <string name="create_normal_team" translatable="false">Create Normal team</string>
    <string name="message_history_query" translatable="false">Message History</string>
    <string name="input_panel_tip" translatable="false">Tip</string>
    <string name="input_panel_guess" translatable="false">Guess</string>
    <string name="input_panel_file" translatable="false">Send File</string>
    <string name="input_panel_snapchat" translatable="false">SnapChat</string>
    <string name="input_panel_aduiochat" translatable="false">Audio Chat</string>
    <string name="input_panel_Videochat" translatable="false">Video Chat</string>
    <string name="settings" translatable="false">设置</string>
    <string name="enter_ysf_str" translatable="false">联系客服</string>
    <string name="no_disturb" translatable="false">免打扰</string>
    <string name="multiport_push" translatable="false">PC/Web在线推送</string>
    <string name="msg_notice" translatable="false">消息提醒</string>
    <string name="offline_push" translatable="false">离线推送</string>
    <string name="recent_sticky" translatable="false">消息置顶</string>
    <string name="About">About</string>
    <string name="Logout">Logout</string>
    <string name="Help">Help</string>
</resources>