<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person"
            android:title="@string/Logout" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/Help" />
<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/ic_settings"-->
<!--            android:title="@string/Settings" />-->
        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/ic_notifications"
            android:title="@string/About" />
    </group>
</menu>